[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameOver.gd" type="Script" id=1]
[ext_resource path="res://RobotoMono-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://font_14.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[node name="GameOver" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.211765, 0.380392, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverText" type="Label" parent="."]
margin_left = 490.0
margin_top = 50.0
margin_right = 790.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 1 )
text = "Game Over!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreText" type="Label" parent="."]
margin_left = 390.0
margin_top = 150.0
margin_right = 890.0
margin_bottom = 255.0
custom_fonts/font = SubResource( 2 )
text = "0 rounds completed
0 million miles traveled
0 million miles remaining"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="."]
margin_left = 590.0
margin_top = 400.0
margin_right = 690.0
margin_bottom = 420.0
custom_fonts/font = ExtResource( 3 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 590.0
margin_top = 500.0
margin_right = 690.0
margin_bottom = 520.0
custom_fonts/font = ExtResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
